# mailsync

./: Makefile.am  NEWS  README  THANKS  configure.ac
acinclude/: ac_inet_funcs.m4  ac_so_preference.m4  ac_with_cclient.m4  ac_with_krb5.m4  ac_with_md5.m4  ac_with_openssl.m4  ac_with_pam.m4
debian/: changelog  control  copyright  rules
debian/source/: options
doc/: mailsync.1
doc/examples/: mailsync
src/: Makefile.am  c-client_callbacks.cc  channel.cc  channel.h  commandline.cc  commandline.h  configuration.cc  list_mails_in_store.cc  list_mails_in_store.h  mail_handling.cc  mailsync_main.cc  main.cc  msgid.cc  msgid.h  options.h  password.cc  password.h  store.cc  store.h  types.h
tests/: run_all_tests.sh
tests/lib/: lib.sh
tests/scenario_store_with_single_mailbox/: .swp  mailsync.conf  test_diff_store_a.sh  test_diff_store_b.sh  test_list_store.sh  test_sync_stores.sh
tests/scenario_store_with_single_mailbox/dir_with_mails_b/: mailbox
tests/scenario_store_with_single_mailbox/expected_output/: test_diff_store_a.sh.output  test_diff_store_b.sh.output  test_list_store.sh.output  test_sync_stores.sh.first_sync.output
tests/scenario_store_with_single_mailbox/mail.orig/: store_a
tests/scenario_store_with_single_mailbox/reference_output/: test_diff_store_a.sh.output
tests/scenario_sync_message_id_with_newline/: mailsync.conf  test_sync_stores.sh
tests/scenario_sync_message_id_with_newline/dir_with_mails_a/: mailbox
tests/scenario_sync_message_id_with_newline/dir_with_mails_b/: mailbox
(+1 files in other folders)
